--- a/michoacan/Templates/michoacan/home.html
+++ b/michoacan/Templates/michoacan/home.html
@@ -56,7 +56,7 @@
                   <li class="has-children"></li>
                 </ul>
               </li>
-              <li><a href="services.html">Servicios</a></li>
+              <li><a href="{%url 'Registrar'%}">FroCarrusel</a></li>
               <li><a href="about.html">Màs</a></li>
               <li><a href="contact.html">Contacto</a></li>
             </ul>
